(#1)[7/7/2017-23:32 pre-alpha]
    Created base repository and logo.
    Uploaded README and changelog.
    No current assigned project version; state is currently in pre-alpha ("preperation") stage.
    Pushed updates to Git.