@@ -1,0 +1,14 @@
+<template>
+  <h2>Hello from {{text}}</h2>
+</template>
+
+<script>
+export default {
+  name: 'test',
+  data () {
+    return {
+       text: ''
+    }
+  }
+}
+</script>
